--- a/assets/style.css
+++ b/assets/style.css
@@ -85,11 +85,30 @@ border-radius: var(--border-radius);
 }
 #formcontainer ,#highscorecontainer{
      
-    margin-left: 100px;     
+    margin-left: 100px;   
+    border: var(--border);
+    border-radius:var(--border-radius);
+    margin-top: 100px;
+    box-shadow:  5px 3px 5px 3px crimson;
+    width :700px;
+    height: 500px;
     
 }
+#form1{
+    padding:10px 10px;
+
+}
+label{
+    font-size: 20px;
+    font-weight: bold;
+}
 #score,#name{
-    display: inline;
+    
+}
+#name{
+    border:2px solid black;
+    height:30px;
+    
 }
 #highscore-link{
     letter-spacing: 1px;
@@ -106,8 +125,26 @@ box-shadow: 2px 5px 2px crimson;
     box-shadow: 2px 5px 2px crimson;
     padding: 5px;
 }
-.replay ,#submit{
+#replay1 ,#submit,#replay2,#clear{
+    
     cursor: pointer;
     box-shadow: 2px 5px 2px crimson;
     padding: 5px;
+}
+li
+{
+    font-size: 20px;
+    font-family: bold;
+    
+    
+}
+h3{
+    padding-left: 10px;
+
+}
+#replay2
+{
+    margin-top:30px ;
+    margin-left: 30px;
+
 }
